fix up form on mobile device

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -50,6 +50,7 @@
 
 .article-form{
   .add-articles {
+    clear:both;
     .image-placeholder {
       opacity: 0.5;
       filter: alpha(opacity=50);
